welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
def posfinale():Boolean={
                        ^SnakeBuggle:9: error: not found: value estfaceMur
  if(!estfaceMur()){
      ^SnakeBuggle:17: error: too many arguments for method droite: ()Unit
    droite(2)
          ^